tests/e2e/not_allowed/immutable.error
Error: syntax error in story at line 1, column 1

1|    immutable = 1
      ^^^^^^^^^

E0030: `immutable` is reserved for future use
